--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   
-  <a href="">assignment day 1 and day 2</a><br>
+  <a href="day1andDay2.html">assignment day 1 and day 2</a><br>
   
 </body>
 </html>
