--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <body>
   
-  <a href="day1andDay2.html">assignment day 1 and day 2</a><br>
+  <a href="day1.html">1. assignment day 1</a><br>
+  
+  <a href="day2.html">1. assignment day 1</a><br>
   
 </body>
 </html>
