--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
+  <head>
+    <style>
+      body{
+      margin:10%;
+        padding:5%;
+      }
+    </style>
+  </head>
 <body>
   
   <a href="day1.html">1. assignment day 1</a><br>
