--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   
   <a href="day2.html">2. assignment day 2</a><br>
   
+   <a href="day3.html">3. assignment day 3</a><br>
+  
 </body>
 </html>
