--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
   
    <a href="day3.html">3. assignment day 3</a><br>
   
+   <a href="day4.html">4. assignment day 4</a><br>
+  
 </body>
 </html>
