--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
   
    <a href="day4.html">4. assignment day 4</a><br>
   
+  <a href="day5.html">5. assignment day 5</a><br>
+  
+   <a href="day5.html">6. assignment day 6</a><br>
+  
 </body>
 </html>
