udated till assignment 6

--- a/day6.html
+++ b/day6.html
@@ -31,41 +31,43 @@
     <h1>Open Console in Dev tools to see the output</h1>
 	  <br><br><br>
 	  <p>
-	  Write a JavaScript function to check whether an `input` is an array or not
-Test Data :
-console.log(is_array('w3resource'));
-console.log(is_array([1, 2, 4, 0]));
-false
-True
-Write a JavaScript function to clone an array
-Test Data :
-console.log(array_Clone([1, 2, 4, 0]));
-console.log(array_Clone([1, 2, [4, 0]]));
-[1, 2, 4, 0]
-[1, 2, [4, 0]]
-
-Write a JavaScript function to get the first element of an array. Passing a parameter 'n' will return the first 'n' elements of the array.
-Test Data :
-console.log(first([7, 9, 0, -2]));
-console.log(first([],3));
-console.log(first([7, 9, 0, -2],3));
-console.log(first([7, 9, 0, -2],6));
-console.log(first([7, 9, 0, -2],-3));
-Expected Output :
-7
-[]
-[7, 9, 0]
-[7, 9, 0, -2]
-[]
-Write a simple JavaScript program to join all elements of the following array into a string.
-Sample array : myColor = ["Red", "Green", "White", "Black"];
-Expected Output :
-"Red,Green,White,Black"
-"Red,Green,White,Black"
-"Red+Green+White+Black"
- Write a JavaScript program to find the most frequent item of an array
-Sample array : var arr1=[3, 'a', 'a', 'a', 2, 3, 'a', 3, 'a', 2, 4, 9, 3];
-Sample Output : a ( 5 times )
+	 Q1. Write a JavaScript function to check whether an `input` is an array or not<br>
+Test Data :<br>
+console.log(is_array('w3resource'));<br>
+console.log(is_array([1, 2, 4, 0]));<br>
+false<br>
+True<br>
+		  <BR>
+Q2.Write a JavaScript function to clone an array<br>
+Test Data :<br>
+console.log(array_Clone([1, 2, 4, 0]));<br>
+console.log(array_Clone([1, 2, [4, 0]]));<br>
+[1, 2, 4, 0]<br>
+[1, 2, [4, 0]]<br>
+<br>
+Q3.Write a JavaScript function to get the first element of an array. Passing a parameter 'n' will return the first 'n' elements of the array.<br>
+Test Data :<br>
+console.log(first([7, 9, 0, -2]));<br>
+console.log(first([],3));<br>
+console.log(first([7, 9, 0, -2],3));<br>
+console.log(first([7, 9, 0, -2],6));<br>
+console.log(first([7, 9, 0, -2],-3));<br>
+Expected Output :<br>
+7<br>
+[]<br>
+[7, 9, 0]<br>
+[7, 9, 0, -2]<br>
+[]<br><br>
+Q4.Write a simple JavaScript program to join all elements of the following array into a string.<br>
+Sample array : myColor = ["Red", "Green", "White", "Black"];<br>
+Expected Output :<br>
+"Red,Green,White,Black"<br>
+"Red,Green,White,Black<br>"
+"Red+Green+White+Black"<br>
+			  <BR>
+ Q5.Write a JavaScript program to find the most frequent item of an array<br>
+Sample array : var arr1=[3, 'a', 'a', 'a', 2, 3, 'a', 3, 'a', 2, 4, 9, 3];<br>
+Sample Output : a ( 5 times )<br>
 	  </p>
     <script>
 	
