--- a/day6.html
+++ b/day6.html
@@ -14,7 +14,7 @@
         --color: #181818;
       }
       body {
-        text-align: center;
+        text-align: left;
         background-color: var(--background-color);
         color: var(--color);
       }
