--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
   
    <a href="day6.html">6. assignment day 6</a><br>
   
+   <a href="day7.html">7. assignment day 7</a><br>
+  
 </body>
 </html>
