--- a/day3.html
+++ b/day3.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="day3css.css">
+	
 	<title>day3</title>
-	<script>
+	<style>
 	
 body {
 	font-family:serif,sans-serif;
@@ -47,7 +47,7 @@ dd{
 	height:90%;
 	width:66%;
 	padding : 5px;
-}</script>
+		}</style>
 
 </head>
 <body>
