--- a/day4.html
+++ b/day4.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>day4 - frontend</title>
-    <link rel="stylesheet" href="day4css.css">
-    <script>
+
+    <style>
 	  
 #clock{  
     position: relative;
@@ -48,7 +48,7 @@
 	transform: rotate(120deg);
     
 }
-	</script>
+	</style>
 </head>
 <body>
     <div id="clock">
