--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   </head>
 <body>
   
-  <a href="day1.html">1. assignment day 1</a><br>
+  <a target =" " href="day1.html">1. assignment day 1</a><br>
   
-  <a href="day2.html">2. assignment day 2</a><br>
+  <a target =" " href="day2.html">2. assignment day 2</a><br>
   
-   <a href="day3.html">3. assignment day 3</a><br>
+   <a target =" " href="day3.html">3. assignment day 3</a><br>
   
-   <a href="day4.html">4. assignment day 4</a><br>
+   <a target =" " href="day4.html">4. assignment day 4</a><br>
   
-  <a href="day5.html">5. assignment day 5</a><br>
+  <a target =" " href="day5.html">5. assignment day 5</a><br>
   
-   <a href="day6.html">6. assignment day 6</a><br>
+   <a target =" " href="day6.html">6. assignment day 6</a><br>
   
-   <a href="day7.html">7. assignment day 7</a><br>
+   <a target =" " href="day7.html">7. assignment day 7</a><br>
+  
+     <a target =" " href="day9.html">9. assignment day 9</a><br>
   
 </body>
 </html>
