--- a/day9.html
+++ b/day9.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>day7 - frontend</title>
+    <title>day9 - frontend</title>
 
 	
 </head>
@@ -18,7 +18,7 @@
     <input type="text" id="2" oninput="myFunc2()">
     <p id="3"></p>
     <br><br>
-<a href="q9">	clicke here to se result for q3 </a>
+<a href="Q9.html">	clicke here to se result for q3 </a>
 
 </body>
 <script>
